versioned_docs/version-4.2/client-api/configuration/_conventions-csharp.mdx
import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';

Conventions give you the ability to customize the Client API behavior. They are accessible from the `DocumentStore` object:

<TabItem value="conventions_1" label="conventions_1">
<CodeBlock language="csharp">
{`using (var store = new DocumentStore()
\{
    Conventions =
    \{
        // Set conventions HERE, e.g.:
        MaxNumberOfRequestsPerSession = 50,
        AddIdFieldToDynamicObjects = false
        // ...
    \}
\}.Initialize())
\{
    // * Here you can interact with the RavenDB store:
    //   open sessions, create or query for documents, perform operations, etc.
    
    // * Conventions CANNOT be set here after calling Initialize()
\}
`}
</CodeBlock>
</TabItem>

You will find many settings to overwrite, allowing you to adjust the client according to your needs. The conventions apply to many different client behaviors. Some of them are grouped and described in the separate articles of this section.

<Admonition type="info" title="">
All customizations need to be set before `DocumentStore.Initialize()` is called.
</Admonition>

## MaxHttpCacheSize

If you need to modify the maximum http cache size, you can use the following setting:

<TabItem value="MaxHttpCacheSize" label="MaxHttpCacheSize">
<CodeBlock language="csharp">
{`MaxHttpCacheSize = new Size(256, SizeUnit.Megabytes) // Set max cache size
`}
</CodeBlock>
</TabItem>

<Admonition type="note" title="Default size" id="default-size" href="#default-size">

The default value of this setting is configured as follows:

* running on 64 bits:
  * if usable memory is lower than or equal to 3GB: 64MB,
  * if usable memory is greater than 3GB and lower than or equal to 6GB: 128MB,
  * if usable memory is greater than 6GB: 512MB,

* running on 32 bits: 32MB.

The cache is created per database you use.

</Admonition>

<Admonition type="note" title="Disable caching" id="disable-caching" href="#disable-caching"> 

To disable the caching globally, you can set the `MaxHttpCacheSize` value to zero:

<TabItem value="disable_cache" label="disable_cache">
<CodeBlock language="csharp">
{`MaxHttpCacheSize = new Size(0, SizeUnit.Megabytes) // Disable caching
`}
</CodeBlock>
</TabItem>

**In this scenario, all the requests will be sent to the server to fetch the data.**

</Admonition>

## MaxNumberOfRequestsPerSession

Gets or sets maximum number of GET requests per session. Default: `30`.

<TabItem value="MaxNumberOfRequestsPerSession" label="MaxNumberOfRequestsPerSession">
<CodeBlock language="csharp">
{`Syntax
        // Syntax:
        public int MaxNumberOfRequestsPerSession \{ get; set; \}
`}
</CodeBlock>
</TabItem>

## UseOptimisticConcurrency

Controls whether optimistic concurrency is set to true by default for all future sessions. Default: `false`.

<TabItem value="UseOptimisticConcurrency" label="UseOptimisticConcurrency">
<CodeBlock language="csharp">
{`UseOptimisticConcurrency = true
`}
</CodeBlock>
</TabItem>

## RequestTimeout

It allows you to define the global request timeout value for all `RequestExecutors` created per database. Default: `null`.

<TabItem value="RequestTimeout" label="RequestTimeout">
<CodeBlock language="csharp">
{`RequestTimeout = TimeSpan.FromSeconds(90)
`}
</CodeBlock>
</TabItem>

## DisableTopologyUpdates

Forces you to disable updates of database topology. Default: `false`.

<TabItem value="DisableTopologyUpdates" label="DisableTopologyUpdates">
<CodeBlock language="csharp">
{`Syntax
        // Syntax:
        public bool DisableTopologyUpdates \{ get; set; \}
`}
</CodeBlock>
</TabItem>

## SaveEnumsAsIntegers

It determines if C# `enum` types should be saved as integers or strings and instructs the LINQ provider to query enums as integer values. Default: `false`.

<TabItem value="SaveEnumsAsIntegers" label="SaveEnumsAsIntegers">
<CodeBlock language="csharp">
{`Syntax
        // Syntax:
        public bool SaveEnumsAsIntegers \{ get; set; \} 
`}
</CodeBlock>
</TabItem>

## UseCompression

It determines if the client will send headers to the server indicating that it allows compression to be used. Default: `true`.

<TabItem value="UseCompression" label="UseCompression">
<CodeBlock language="csharp">
{`Syntax
        // Syntax:
        public bool UseCompression \{ get; set; \}
`}
</CodeBlock>
</TabItem>

## OperationStatusFetchMode

Changes the way the operation is fetching the operation status when waiting for completion. By default, the value is set to `ChangesApi` which underneath is using WebSocket protocol when connection is established with the server. On some older systems e.g. Windows 7, the WebSocket protocol might not be available due to the OS and .NET Framework limitations. For that reason, the value can be changed to `Polling` to bypass this issue.

<TabItem value="OperationStatusFetchMode" label="OperationStatusFetchMode">
<CodeBlock language="csharp">
{`OperationStatusFetchMode = OperationStatusFetchMode.ChangesApi // ChangesApi | Polling
`}
</CodeBlock>
</TabItem>

## Changing fields/properties naming convention 

By default whatever casing convention you use in your entities' fields will be reflected server-side.

If following language-specific field casing conventions RavenDB clients use different field/properties naming conventions:

| Language | Default convention | Example |
| ------------- | ----- | --- |
| C# | PascalCase | OrderLines |
| Java | camelCase | orderLines |
| JavaScript | camelCase | orderLines |

This can be configured to allow inter-language operability e.g. store data PascalCase, but keep fields in the application code camelCase.

### Using camelCase in C# client

You have to customize *JsonSerializer* and *PropertyNameConverter*.  

<TabItem value="FirstChar" label="FirstChar">
<CodeBlock language="csharp">
{`private string FirstCharToLower(string str) => $"\{Char.ToLower(str[0])\}\{str.Substring(1)\}";
`}
</CodeBlock>
</TabItem>

<TabItem value="PropertyCasing" label="PropertyCasing">
<CodeBlock language="csharp">
{`Serialization = new NewtonsoftJsonSerializationConventions
\{
    // .Net properties will be serialized as camelCase in the JSON document when storing an entity
    // and deserialized back to PascalCase
    CustomizeJsonSerializer = s => s.ContractResolver = new CamelCasePropertyNamesContractResolver()
\},

// In addition, the following convention is required when
// making a query that filters by a field name and when indexing. 
PropertyNameConverter = memberInfo => FirstCharToLower(memberInfo.Name)
`}
</CodeBlock>
</TabItem>

## TopologyCacheLocation

Changes the location of topology cache files. Setting this value will check directory existance and write permissions. By default it is set to the application base directory (`AppContext.BaseDirectory`).

<TabItem value="TopologyCacheLocation" label="TopologyCacheLocation">
<CodeBlock language="csharp">
{`TopologyCacheLocation = @"C:\\RavenDB\\TopologyCache"
`}
</CodeBlock>
</TabItem>

## AddIdFieldToDynamicObjects

Determines whether an Id field is automatically added to dynamic objects. Default: `true`.

<TabItem value="AddIdFieldToDynamicObjects" label="AddIdFieldToDynamicObjects">
<CodeBlock language="csharp">
{`Syntax
        // Syntax:
        public bool AddIdFieldToDynamicObjects \{ get; set; \}
`}
</CodeBlock>
</TabItem>

## WaitForIndexesAfterSaveChangesTimeout

Sets the default timeout for DocumentSession.Advanced.WaitForIndexesAfterSaveChanges method.  

Default: 15 Seconds.  

<TabItem value="WaitForIndexesAfterSaveChangesTimeout" label="WaitForIndexesAfterSaveChangesTimeout">
<CodeBlock language="csharp">
{`WaitForIndexesAfterSaveChangesTimeout = TimeSpan.FromSeconds(10)
`}
</CodeBlock>
</TabItem>

## WaitForReplicationAfterSaveChangesTimeout

Sets the default timeout for DocumentSession.Advanced.WaitForReplicationAfterSaveChanges method.
Default: 15 Seconds.

<TabItem value="WaitForReplicationAfterSaveChangesTimeout" label="WaitForReplicationAfterSaveChangesTimeout">
<CodeBlock language="csharp">
{`WaitForReplicationAfterSaveChangesTimeout = TimeSpan.FromSeconds(10)
`}
</CodeBlock>
</TabItem>

## WaitForNonStaleResultsTimeout

Sets the default timeout WaitForNonStaleResults methods used when querying. 
Default: 15 Seconds.

<TabItem value="WaitForNonStaleResultsTimeout" label="WaitForNonStaleResultsTimeout">
<CodeBlock language="csharp">
{`WaitForNonStaleResultsTimeout = TimeSpan.FromSeconds(10)
`}
</CodeBlock>
</TabItem>



